2007-08-17  Torsten Rahn  <rahn@kde.org>

    * src/lib/measuretool.{cpp,h}
    Renaming to MeasureTool.{cpp,h}

2007-08-17  Torsten Rahn  <rahn@kde.org>

    * src/lib/MarbleDirs.cpp:
    Rearranging the code to be more in line with the
    description in MarbleDirs.h.
    Renaming the two marbleDataPaths to something more
    intuitive: compileTimeMarbleDataPath (for the cmake
    version) and runTimeMarbleDataPath (for the version
    that gets modified via the settings).

    * CMakeLists.txt:
    Adjusting the definition of MARBLE_DATA_PATH. -
    Should rather get defined like data_dir gets 
    defined in CMakeList.txt in marble/data, 
    shouldn't it?

2007-08-17  Torsten Rahn  <rahn@kde.org>

    Making naming of the directory paths more consistent
    with Qt/KDE naming scheme: "Dir" names a QDir,
    "Path" the QString of the respective directory name.

    systemDir --> systemPath, localDir --> localPath

    * src/lib/TileCreator.cpp
    * src/lib/placemarkmanager.cpp
    * src/lib/HttpDownloadManager.cpp
    * src/lib/HttpFetchFile.cpp
    * src/lib/maptheme.cpp
    * src/lib/tinywebbrowser.cpp
    * src/lib/MarbleDirs.{cpp,h}:

    Introduced MarbleDataPath as a "static global".

2007-08-16  Inge Wallin  <inge@lysator.liu.se>

	Make the compass work again
	* data/legend.html: Mention compass instead of windrose
	* data/CMakeLists.txt: install compass.svg instead of windrose.svg
	
	Rename KAtlasTileCreatorDialog into TileCreatorDialog 
	* src/lib/katlastilecreatordialog.cpp: rename into TileCreatorDialog.cpp
	* src/lib/katlastilecreatordialog.h:   rename into TileCreatorDialog.h
	* src/lib/katlastilecreatordialog.ui:  rename into TileCreatorDialog.ui
	* src/lib/MarbleWidget.{h,cpp}: refer to new name
	* src/lib/MarbleModel.cpp: refer to new name
	* src/lib/CMakeLists.txt: reflect name change

	Rename KAtlasMapScale into MapScaleFloatItem
	* src/lib/katlasmapscale.cpp: rename into MapScaleFloatItem.cpp